<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/user_name"
        android:padding="9dp"/>

    <EditText
        android:id="@+id/userMoblieNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/user_number"
        android:padding="9dp"/>

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/user_password"
        android:padding="9dp"/>

    <Button
        android:id="@+id/userLoginButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#fff"/>

</LinearLayout>