<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#99607D8B"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/edit_text_shape"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:inputType="text|textMultiLine"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/addressText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_shape"
                    android:gravity="top"
                    android:hint="@string/address"
                    android:inputType="text|textMultiLine"
                    android:padding="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#99607D8B"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinnerZone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_shape"
                    android:padding="7dp"/>

                <Spinner
                    android:id="@+id/spinnerDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_shape"
                    android:padding="7dp"/>

                <Spinner
                    android:id="@+id/spinnerSelectionRoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_shape"
                    android:padding="7dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#99607D8B"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/latitudeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/latitude"
                    android:inputType="numberDecimal"
                    android:maxLength="12"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/longitudeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/longitude"
                    android:inputType="numberDecimal"
                    android:maxLength="12"
                    android:padding="7dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#99607D8B"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userMobileNoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/user_number"
                    android:inputType="number"
                    android:maxLength="14"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/amountText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:padding="7dp"/>

                <Button
                    android:id="@+id/postButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape"
                    android:hint="@string/add_post" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>